[package]
name = "primrose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
crossbeam-utils = "0.8.8"
env_logger = "0.9.0"
log = "0.4.16"
nix = "0.23.1"
rusb = "0.9.1"
strum = { version = "0.24.0", features = ["derive"] }
